; ModuleID = '/home/carl/AnghaBench/openvpn/src/openvpn/extr_ssl.c_auth_deferred_expire_window.c'
source_filename = "/home/carl/AnghaBench/openvpn/src/openvpn/extr_ssl.c_auth_deferred_expire_window.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.tls_options = type { i32, i32 }

@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (%struct.tls_options*)* @auth_deferred_expire_window to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @auth_deferred_expire_window(%struct.tls_options* %0) #0 {
  %2 = alloca %struct.tls_options*, align 8
  %3 = alloca i32, align 4
  %4 = alloca i32, align 4
  store %struct.tls_options* %0, %struct.tls_options** %2, align 8
  %5 = load %struct.tls_options*, %struct.tls_options** %2, align 8
  %6 = getelementptr inbounds %struct.tls_options, %struct.tls_options* %5, i32 0, i32 0
  %7 = load i32, i32* %6, align 4
  store i32 %7, i32* %3, align 4
  %8 = load %struct.tls_options*, %struct.tls_options** %2, align 8
  %9 = getelementptr inbounds %struct.tls_options, %struct.tls_options* %8, i32 0, i32 1
  %10 = load i32, i32* %9, align 4
  %11 = sdiv i32 %10, 2
  store i32 %11, i32* %4, align 4
  %12 = load %struct.tls_options*, %struct.tls_options** %2, align 8
  %13 = getelementptr inbounds %struct.tls_options, %struct.tls_options* %12, i32 0, i32 1
  %14 = load i32, i32* %13, align 4
  %15 = icmp ne i32 %14, 0
  br i1 %15, label %16, label %22

16:                                               ; preds = %1
  %17 = load i32, i32* %4, align 4
  %18 = load i32, i32* %3, align 4
  %19 = icmp slt i32 %17, %18
  br i1 %19, label %20, label %22

20:                                               ; preds = %16
  %21 = load i32, i32* %4, align 4
  store i32 %21, i32* %3, align 4
  br label %22

22:                                               ; preds = %20, %16, %1
  %23 = load i32, i32* %3, align 4
  ret i32 %23
}


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
